mule-user-guide/v/3.3/mule-high-availability-ha-clusters.adoc
=  Mule高可用性（HA）群集概述

*cluster*是一组作为单元的Mule实例。换句话说，群集是由多个节点组成的虚拟服务器。集群中的服务器通过分布式共享内存网格进行通信和共享信息。这意味着数据在不同物理机器的内存中复制。

image:cluster.png[簇]

== 集群的好处

将Mule ESB服务器集中在一起可确保高系统可用性。如果节点因故障或计划停机而变得不可用，则群集中的另一个节点可承担工作负载并继续处理现有事件和消息。下图说明了由两个节点集群处理传入消息的情况。注意处理负载在节点间平衡 - 节点1处理消息1，而节点2同时处理消息2。

image:FailoverNoFail.png[FailoverNoFail]

如果一个节点发生故障，其他可用节点将接管故障节点的工作。如下图所示，如果节点2发生故障，则节点1同时处理消息1和消息2。

image:FailoverNode2Fail.png[FailoverNode2Fail]

因为集群中的所有节点都同时处理消息，所以集群还可以提高性能和可伸缩性。与单个节点实例相比，群集可以通过在多个节点之间共享工作负载或向群集添加节点来支持更多用户或提高应用程序性能。

下图更详细地说明了工作负载共享。两个节点处理与订单履行相关的消息。但是，当一个节点负载过重时，它可以将处理过程中的一个或多个步骤移动到另一个节点。这里，流程订单折扣步骤的处理将移动到节点1，并且处理完成订单步骤将移动到节点2。

image:cluster-diagram.png[群集图]

除了自动故障转移带来的高可用性，改进的性能以及增强的可扩展性之外，群集Mule实例还具有以下优点：

* 自动协调对资源（如文件，数据库和FTP源）的访问。 Mule自动管理哪个节点处理来自数据源的通信。
* 群集中处理的自动负载平衡。如果您将流分成一系列步骤，并将这些步骤与VM等传输方式相连，则每个步骤都放入一个队列中，从而启用群集。然后Mule可以处理任何节点中的每个步骤，从而更好地平衡节点间的负载。
* 集群生命周期管理和控制。见 link:/mule-management-console/v/3.3/managing-mule-high-availability-ha-clusters[管理Mule高可用性（HA）群集]。
* 群集和节点性能监视。见 link:/mule-management-console/v/3.3/monitoring-a-cluster[监视群集]。
* 引发警报。您可以设置一个警报，以便在节点停止运行时以及节点恢复运行时显示。

[NOTE]
集群中的所有Mule实例都会主动处理消息。请注意，Mule是内部可扩展的 - 通过利用多个内核，单个Mule实例可以轻松扩展。即使Mule实例利用多个核心，它仍然作为群集中的单个服务器或节点运行。

== 关于集群

Mule ESB *Cluster*由2〜8个Mule ESB服务器实例组成，或*nodes*组合在一起并视为一个单元。因此，您可以像部署单个Mule服务器一样部署，监控或停止群集中的所有节点。

集群中的所有节点共享内存，如下所示：+

image:topology_4-cluster.png[topology_4集群]

Mule使用*active-active*模型对服务器进行聚类，而不是*active-passive*模型。

在*active-passive*模型中，集群中的一台服务器充当*primary*或活动节点，而其他服务器则是*secondary*或被动节点。这种模型中的应用程序在主服务器上运行，并且只有在第一台服务器出现故障时才运行在辅助服务器上。在这个模型中，次要节点的处理能力主要被浪费在被动等待主节点失败的情况下。

在*active-active*模型中，群集中没有一台服务器充当主服务器;群集中的所有服务器均支持该应用程序。该模型中的这个应用程序可以在所有服务器上运行，甚至可以拆分节点之间的消息处理以加速跨节点的处理。

== 关于队列

您可以跨节点将*VM queue*明确设置为*load balance*。因此，如果整个应用程序流包含一系列子流，则Mule可以将每个连续的子流分配给当时恰好可用的节点。有可能，Mule可以在多个节点上处理单个消息，因为它通过整个应用程序流程，如下所示：

image:load_balancing.png[负载均衡]

== 关于高可靠性应用

*high-reliability*应用程序必须具备以下功能：

. 消息丢失的容忍度不高
. 可靠的基础企业服务总线（ESB）
. 高度可靠的个人连接

称为*transactionality*的功能会跟踪应用程序事件序列，以确保每个消息处理步骤都已成功完成，因此不会丢失任何消息或处理错误。如果步骤失败，出于某种原因，事务机制将回滚所有以前的处理事件，然后再次重新启动消息处理序列。

诸如JMS，VM和JDBC之类的传输提供了内置的事务支持，从而确保消息得到可靠的处理。例如，您可以在入站JMS端点上配置事务，以便仅在事务提交后才从JMS服务器移除消息。这确保了如果在处理流程期间发生错误，原始消息仍可用于重新处理。

您必须使用*XA transactions*在支持事务的不同传输之间移动消息。这确保Mule将来自两个传输的关联事务作为单个单元提交。有关XA和Mule支持的其他类型交易的更多信息，请参阅 link:/mule-user-guide/v/3.3/transaction-management[交易管理]。

支持传输的== 群集

群集内支持所有Mule传输。由于不同传输访问入站流量的方式不同，这种支持的细节非常多。通常，出站流量在集群内部和外部的行为方式相同 - 下面突出显示差异。

Mule支持三种基本类型的传输：

* 基于套接字的传输读取发送到Mule拥有的网络套接字的输入。例子包括TCP，UDP和HTTP [S]。
* 基于监听器的传输使用完全支持并发多个访问器的协议读取数据。示例包括JMS和VM。
* 基于资源的传输从允许多个并发访问者的资源读取数据，但本身不协调其资源的使用。例如，假设多个程序正在通过读取，处理和删除文件来处理同一个共享目录中的文件。这些程序必须使用明确的应用程序级锁定策略来防止同一个文件被多次处理。基于资源的传输的例子包括文件，FTP，SFTP，电子邮件和JDBC。

如下所述，所有三种基本类型的传输都以不同方式在群集中得到支持。

* 插座基
** 由于每个群集Mule实例运行在不同的网络节点上，因此每个实例只接收发送到其节点的基于套接字的流量。传入的基于套接字的流量应该使用<<Clustering and Load Balancing>>在集群实例之间分配流量。
** 输出到基于套接字的传输被写入特定的主机/端口组合。如果主机/端口组合是外部主机，则不需要特别考虑。如果它是本地主机上的端口，请考虑在负载平衡器上使用该端口，以便更好地在集群间分配流量。
* 为基础的监听
** 基于监听器的传输完全支持多位读者和作者。没有特别的考虑因素适用于输入或输出。
** 请注意，在群集中，VM传输队列是共享的群集范围资源。群集会自动同步对VM传输队列的访问。因此，写入VM队列的消息可以由任何群集节点处理。这使VM成为群集节点间共享工作的理想选择。
* 资源为基础的
**  Mule HA Clustering自动协调对每个资源的访问，确保一次只有一个群集实例访问每个资源。因此，立即将从基于资源的传输中读取的消息写入VM队列通常是一个好主意。这允许其他群集节点参与处理消息。
** 写入基于资源的集群传输时没有特别考虑因素：
*** 当写入基于文件的传输（文件，FTP，SFTP）时，Mule将生成唯一的文件名。
*** 写入JDBC时，Mule可以生成唯一的密钥。
*** 撰写电子邮件实际上是基于侦听器而非基于资源的。

== 集群和可靠的应用程序

高可靠性应用（对消息丢失容忍度不高的应用）不仅要求底层ESB可靠，而且需要将可靠性扩展到单个连接。 link:/mule-user-guide/v/3.3/reliability-patterns[可靠性模式]为您提供了在群集中构建完全可靠应用程序的工具。

目前的Mule文档提供了 link:/mule-user-guide/v/3.3/reliability-patterns[代码示例]，展示了如何为许多不同的非事务性传输（包括HTTP，FTP，File和IMAP）实现可靠性模式。如果您的应用程序使用非事务性传输，请遵循可靠性模式。这些模式确保消息被接受并成功处理，或者生成允许客户端重试的"unsuccessful"响应。

如果您的应用程序使用事务传输（例如JMS，VM和JDBC），请使用事务。 Mule对事务传输的内置支持为使用这些传输的应用程序提供可靠的消息传递。

这些操作也可以应用于非群集应用程序。

== 群集和负载平衡

当Mule群集用于提供TCP请求（其中TCP包括SSL / TLS，UDP，多播，HTTP和HTTPS）时，需要进行某些负载平衡以在群集实例之间分配请求。有各种软件负载均衡器可用，其中两个是：

*  Nginx，一款开源的HTTP服务器和反向代理。您可以使用Nginx的 http://wiki.nginx.org/HttpUpstreamModule[HttpUpstreamModule]进行HTTP（S）负载平衡。您可以在Linode库条目 http://library.linode.com/web-servers/nginx/configuration/front-end-proxy-and-software-load-balancing[使用Nginx进行代理服务和软件负载平衡]中找到更多信息。
*  Apache Web服务器，也可以用作HTTP（S）负载平衡器。

还有很多硬件负载均衡器可以路由TCP和HTTP（S）流量。

==  HA Demo

要亲自评估Mule的HA集群功能，请下载 link:/mule-user-guide/v/3.6/evaluating-mule-high-availability-clusters-demo[* Mule HA Demo Bundle *]。旨在帮助新用户评估Mule高可用性群集的功能，Mule HA Demo Bundle教您如何使用Mule管理控制台创建Mule实例群集，然后部署应用程序以在群集上运行。此外，本演示模拟两种处理方案，说明群集自动平衡正常处理负载的能力，以及其在故障转移情况下可靠地保持活动状态的能力。

== 最佳实践

有许多与群集相关的推荐做法。这些包括：

* 尽可能将应用程序组织为一系列步骤，每个步骤将消息从一个事务性商店移动到另一个事务性商店。
* 如果您的应用程序处理来自非事务性传输的消息，请使用 link:/mule-user-guide/v/3.3/reliability-patterns[可靠性模式]将它们移动到事务性商店，如VM或JMS商店。
* 使用事务处理来自事务传输的消息。这确保了如果遇到错误，消息将被重新处理。
* 使用分布式存储（如与VM或JMS传输一起使用的分布式存储） - 这些存储可用于整个群集。这比用于诸如File，FTP和JDBC之类的传输的非分布式存储更为可取 - 这些存储一次只能由单个节点读取。
* 使用VM传输来获得最佳性能。将JMS传输用于整个群集退出后需要保存数据的应用程序。
* 在集群内创建最能满足您需求的节点数量。
* 实施 link:/mule-user-guide/v/3.3/reliability-patterns[可靠性模式]以创建高可靠性应用程序。

== 先决条件和限制

* 目前，您可以创建一个由至少两台服务器组成的集群，最多可以有八个。但是，每台服务器都必须运行在不同的物理（或虚拟）机器上。
* 为了保持集群中节点之间的同步，Mule HA需要在服务器之间建立可靠的网络连接。
* 您必须打开以下端口才能设置Mule群集：端口5701和端口54327。
* 由于使用多播来执行新集群成员发现，因此您需要启用多播IP：224.2.2.3 +
* 为了提供TCP请求，需要跨越Mule群集进行一些负载均衡。有关可以使用的第三方负载均衡器的更多信息，请参阅<<Clustering and Load Balancing>>。您还可以通过将流程分成一系列步骤并将每个步骤与诸如VM之类的传输进行连接来对集群中的处理进行负载平衡。该集群启用每一步，允许Mule更好地平衡节点间的负载。
* 必须为群集中的每个服务器启用多播。这使实例能够找到彼此。
* 如果您的自定义消息源不使用消息接收器来定义节点 http://en.wikipedia.org/wiki/Polling_(computer_science)[轮询]，则必须配置消息源以实现ClusterizableMessageSource接口。 +
ClusterizableMessageSource指出集群内只有一个应用程序节点包含消息源的活动（即已启动）实例;这是ACTIVE节点。如果活动节点出错，ClusterizableMessageSource会选择一个新的活动节点，然后在该节点中启动消息源。

== 另请参阅

使用Mule管理控制台的Mule的*  link:http://www.mulesoft.com/managing-mule-esb-enterprise[下载试用版]进行高可用性试验。 （下载*Runtime - Mule ESB Enterprise (with Management Tools)*）。
*  link:/mule-user-guide/v/3.3/installing-a-commercial-license[安装企业许可证]开始使用Mule管理控制台管理生产中的群集。
